# gs-transfer

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
docs/: index.md
src/: Makefile.am  Makefile.in  common.h  display.c  display.h  gs-transfer.c  gs-utils.c  gs-utils.h  gsocket.c  gsocket.h  pkt.c  pkt.h
test/: test-client.sh  test-server.sh
